@@ -7,6 +7,7 @@ import java.util.ArrayList;
 import edu.colorado.phet.common.phetcommon.model.Resettable;
 import edu.colorado.phet.common.phetcommon.model.property.Property;
 import edu.colorado.phet.common.phetcommon.util.SimpleObserver;
+import edu.colorado.phet.common.phetcommon.util.function.VoidFunction1;
 import edu.colorado.phet.common.phetcommon.view.graphics.transforms.ModelViewTransform;
 import edu.colorado.phet.linegraphing.intro.model.LineGraph;
 import edu.colorado.phet.linegraphing.intro.model.SlopeInterceptLine;
@@ -25,9 +26,10 @@ class LineGraphNode extends GraphNode implements Resettable {
     private final LineGraph graph;
     private final ModelViewTransform mvt;
     private final ArrayList<SlopeInterceptLineNode> savedLineNodes;
+    private SlopeInterceptLineNode interactiveLineNode;
     private final SlopeInterceptLineNode yEqualsXLineNode, yEqualsNegativeXLineNode;
 
-    public LineGraphNode( LineGraph graph, ModelViewTransform mvt, SlopeInterceptLine yEqualsXLine, SlopeInterceptLine yEqualsNegativeXLine ) {
+    public LineGraphNode( final LineGraph graph, final ModelViewTransform mvt, final Property<SlopeInterceptLine> interactiveLine, SlopeInterceptLine yEqualsXLine, SlopeInterceptLine yEqualsNegativeXLine ) {
         super( graph, mvt );
 
         this.graph = graph;
@@ -35,11 +37,23 @@ class LineGraphNode extends GraphNode implements Resettable {
 
         savedLineNodes = new ArrayList<SlopeInterceptLineNode>();
 
+        interactiveLineNode = new SlopeInterceptLineNode( interactiveLine.get(), graph, mvt, Color.RED );
+        addChild( interactiveLineNode );
         yEqualsXLineNode = new SlopeInterceptLineNode( yEqualsXLine, graph, mvt, Color.BLUE );
         addChild( yEqualsXLineNode );
         yEqualsNegativeXLineNode = new SlopeInterceptLineNode( yEqualsNegativeXLine, graph, mvt, Color.CYAN );
         addChild( yEqualsNegativeXLineNode );
 
+        // When the interactive line changes, update the graph.
+        interactiveLine.addObserver( new VoidFunction1<SlopeInterceptLine>() {
+            public void apply( SlopeInterceptLine line ) {
+                removeChild( interactiveLineNode );
+                interactiveLineNode = new SlopeInterceptLineNode( interactiveLine.get(), graph, mvt, Color.RED );
+                addChild( interactiveLineNode );
+            }
+        } );
+
+        // Visibility of lines
         yEqualsXVisible.addObserver( new SimpleObserver() {
             public void update() {
                 updateLinesVisibility();
@@ -55,6 +69,8 @@ class LineGraphNode extends GraphNode implements Resettable {
                 updateLinesVisibility();
             }
         } );
+
+        interactiveLineNode.moveToFront();
     }
 
     public void reset() {
@@ -64,6 +80,7 @@ class LineGraphNode extends GraphNode implements Resettable {
     }
 
     private void updateLinesVisibility() {
+        interactiveLineNode.setVisible( linesVisible.get() );
         yEqualsXLineNode.setVisible( linesVisible.get() && yEqualsXVisible.get() );
         yEqualsNegativeXLineNode.setVisible( linesVisible.get() && yEqualsNegativeXVisible.get() );
     }
@@ -73,6 +90,7 @@ class LineGraphNode extends GraphNode implements Resettable {
         SlopeInterceptLineNode lineNode = new SlopeInterceptLineNode( line, graph, mvt, color );
         savedLineNodes.add( lineNode );
         addChild( lineNode );
+        interactiveLineNode.moveToFront(); // interactive line is always in the foreground
     }
 
     // Erases all of the "saved" lines
